--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "pnpm": ">=9"
   },
   "dependencies": {
+    "@mikro-orm/core": "^6.3.8",
+    "@mikro-orm/nestjs": "^6.0.2",
+    "@mikro-orm/sqlite": "^6.3.8",
     "@nestjs/common": "^10.4.1",
     "@nestjs/core": "^10.4.1",
     "@nestjs/platform-fastify": "^10.4.1",
