--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "pnpm": ">=9"
   },
   "dependencies": {
+    "@apollo/server": "^4.11.0",
     "@mikro-orm/core": "^6.3.8",
     "@mikro-orm/nestjs": "^6.0.2",
     "@mikro-orm/sqlite": "^6.3.8",
+    "@nestjs/apollo": "^12.2.0",
     "@nestjs/common": "^10.4.1",
     "@nestjs/core": "^10.4.1",
+    "@nestjs/graphql": "^12.2.0",
     "@nestjs/platform-fastify": "^10.4.1",
     "class-validator": "^0.14.1",
+    "graphql": "^16.9.0",
     "jest": "^29.7.0",
     "typescript": "^5.5.4"
   },
