--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.11.0",
+    "@as-integrations/fastify": "^2.1.1",
     "@mikro-orm/core": "^6.3.8",
     "@mikro-orm/nestjs": "^6.0.2",
     "@mikro-orm/sqlite": "^6.3.8",
@@ -29,6 +30,7 @@
     "class-validator": "^0.14.1",
     "graphql": "^16.9.0",
     "jest": "^29.7.0",
+    "ts-morph": "^23.0.0",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
