--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node ./dist/main.js",
     "dev": "tsc --build --clean && tsc --build && node ./dist/main.js",
     "docker": "docker build . -t quokka ",
-    "prepare": "husky"
+    "prepare": "husky",
+    "mgr-create": "mikro-orm migration:create"
   },
   "author": "hwisu",
   "license": "MIT",
@@ -19,18 +20,24 @@
   "dependencies": {
     "@apollo/server": "^4.11.0",
     "@as-integrations/fastify": "^2.1.1",
+    "@mikro-orm/cli": "^6.3.8",
     "@mikro-orm/core": "^6.3.8",
+    "@mikro-orm/migrations": "^6.3.8",
     "@mikro-orm/nestjs": "^6.0.2",
+    "@mikro-orm/reflection": "^6.3.8",
     "@mikro-orm/sqlite": "^6.3.8",
     "@nestjs/apollo": "^12.2.0",
     "@nestjs/common": "^10.4.1",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.4.1",
     "@nestjs/graphql": "^12.2.0",
     "@nestjs/platform-fastify": "^10.4.1",
     "class-validator": "^0.14.1",
     "graphql": "^16.9.0",
     "jest": "^29.7.0",
+    "mikro-orm": "^6.3.8",
     "ts-morph": "^23.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
