--- a/package.json
+++ b/package.json
@@ -20,6 +20,13 @@
   "dependencies": {
     "@apollo/server": "^4.11.0",
     "@as-integrations/fastify": "^2.1.1",
+    "@fastify/circuit-breaker": "^3.2.0",
+    "@fastify/compress": "^7.0.3",
+    "@fastify/cors": "^9.0.1",
+    "@fastify/helmet": "^11.1.1",
+    "@fastify/jwt": "^8.0.1",
+    "@fastify/passport": "^2.5.0",
+    "@fastify/rate-limit": "^9.1.0",
     "@mikro-orm/cli": "^6.3.8",
     "@mikro-orm/core": "^6.3.8",
     "@mikro-orm/migrations": "^6.3.8",
@@ -33,10 +40,11 @@
     "@nestjs/graphql": "^12.2.0",
     "@nestjs/platform-fastify": "^10.4.1",
     "class-validator": "^0.14.1",
+    "fast-json-stringify": "^6.0.0",
     "graphql": "^16.9.0",
     "jest": "^29.7.0",
     "mikro-orm": "^6.3.8",
-    "ts-morph": "^23.0.0",
+    "ts-morph": "^21.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   },
